--- a/TODO
+++ b/TODO
@@ -7,3 +7,28 @@
 //TODO Build planner .
 
 //TODO do a task class and implements every tasks types.
+
+
+//TODO apply offset like that [0,0],
+  [1,0],
+  [0,1],
+  [-1,0],
+  [0,-1]
+]
+
+
+//TODO add command that spawn
+.spawnCreep([MOVE,MOVE,MOVE,MOVE,MOVE,MOVE,WORK,WORK,WORK,CARRY,CARRY,CARRY], "sendhelp", {
+    memory: {
+        _trav: undefined,
+        _travel: undefined,
+        role: "harvester",
+        source_to_target: 0,
+        needs_energy: false,
+        target: undefined,
+        action: "IDLE",
+        room: "W46S23",
+        spawn_name:  "Spawn1",
+        lvl: 800,
+    },
+})
