--- a/TODO
+++ b/TODO
@@ -21,3 +21,5 @@ Game.spawns["Spawn1"].spawnCreep([MOVE,MOVE,WORK,CARRY], "sendhelp", {
 
 
 //TODO CHECKPOINTS
+TODO AUTO TOP_LEFT_BUNKER
+TODO REWORK CLASSES_IN_ROOM
